--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "cookie-session": "^2.0.0-beta.3",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
+    "crypto": "^1.0.1",
     "css-loader": "^0.28.0",
     "dir-glob": "^2.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "formidable": "^1.2.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.18.0",
     "ignore": "^3.3.7",
@@ -65,6 +68,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "p-try": "^1.0.0",
+    "path": "^0.12.7",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
