--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.5.0",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -73,6 +74,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "redis": "^2.8.0",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
